service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  labels:
    app: wisecow
spec:
  selector:
    app: wisecow
  ports:
  - protocol: TCP
    port: 80  
    targetPort: 4499
    nodePort: 30080   
  type: NodePort
